# MNEMONIC

./: .gitignore  README.md  mnemonic_briefing.md  pyproject.toml
mnemonic/: cli.py  prompts.py  types.py
mnemonic/adapters/: base.py  engram.py
mnemonic/llm/: base.py  ollama.py  openai.py
mnemonic/scoring/: scorer.py
mnemonic/suites/: base.py
tests/: test_cli.py  test_dataset.py  test_engram_adapter.py  test_llm_providers.py  test_prompts.py  test_scorer.py  test_suite.py  test_types.py
