[project]
name = "mnemonic-benchmark"
version = "0.1.0"
description = "MNEMONIC: Memory Network Evaluation Metric for Ongoing Natural Interaction and Cognition"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "rich>=13",
]

[project.scripts]
mnemonic = "mnemonic.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mnemonic"]

[tool.ruff]
src = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
